--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXd-3d-7DM">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXd-3d-7DM" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4vH-kN-muj">
@@ -85,19 +85,74 @@
         <scene sceneID="7mK-b4-1ko">
             <objects>
                 <viewController id="1AH-kj-1gL" customClass="ChannelVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="425-zC-GR8">
+                    <view key="view" contentMode="scaleToFill" id="425-zC-GR8" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFm-xj-mZB">
+                                <rect key="frame" x="10" y="45" width="60" height="28"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-MediumItalic" family="Avenir Next" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxf-Q2-SGc">
+                                <rect key="frame" x="10" y="93" width="64" height="17"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18W-DG-zjT">
+                                <rect key="frame" x="278" y="90.5" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="5QZ-f8-YtI">
+                                <rect key="frame" x="20" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="fg3-yR-oFh"/>
+                                    <constraint firstAttribute="height" constant="75" id="sbc-fg-gYD"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S1a-Hw-jNO">
+                                <rect key="frame" x="0.0" y="130" width="375" height="422"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3a1-v2-4vo">
+                                <rect key="frame" x="115" y="589.5" width="55" height="40"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cxf-Q2-SGc" firstAttribute="top" secondItem="NFm-xj-mZB" secondAttribute="bottom" constant="20" id="6nc-95-Xmj"/>
+                            <constraint firstItem="S1a-Hw-jNO" firstAttribute="top" secondItem="cxf-Q2-SGc" secondAttribute="bottom" constant="20" id="9bG-KV-bpD"/>
+                            <constraint firstAttribute="trailing" secondItem="18W-DG-zjT" secondAttribute="trailing" constant="75" id="HKR-Vw-iFa"/>
+                            <constraint firstItem="UtZ-8l-VSF" firstAttribute="trailing" secondItem="S1a-Hw-jNO" secondAttribute="trailing" id="Jzs-YQ-HSz"/>
+                            <constraint firstItem="5QZ-f8-YtI" firstAttribute="leading" secondItem="UtZ-8l-VSF" secondAttribute="leading" constant="20" id="Lai-pZ-JEJ"/>
+                            <constraint firstItem="NFm-xj-mZB" firstAttribute="leading" secondItem="UtZ-8l-VSF" secondAttribute="leading" constant="10" id="Na7-Wr-e3N"/>
+                            <constraint firstItem="3a1-v2-4vo" firstAttribute="leading" secondItem="5QZ-f8-YtI" secondAttribute="trailing" constant="20" id="SWa-sC-ENU"/>
+                            <constraint firstItem="UtZ-8l-VSF" firstAttribute="bottom" secondItem="5QZ-f8-YtI" secondAttribute="bottom" constant="20" id="aEy-OG-gxO"/>
+                            <constraint firstItem="NFm-xj-mZB" firstAttribute="top" secondItem="UtZ-8l-VSF" secondAttribute="top" constant="25" id="cUb-W0-CmV"/>
+                            <constraint firstItem="S1a-Hw-jNO" firstAttribute="leading" secondItem="UtZ-8l-VSF" secondAttribute="leading" id="kYa-tO-cYf"/>
+                            <constraint firstItem="18W-DG-zjT" firstAttribute="centerY" secondItem="cxf-Q2-SGc" secondAttribute="centerY" id="pzW-jG-43p"/>
+                            <constraint firstItem="cxf-Q2-SGc" firstAttribute="leading" secondItem="UtZ-8l-VSF" secondAttribute="leading" constant="10" id="qAo-7G-QAF"/>
+                            <constraint firstItem="3a1-v2-4vo" firstAttribute="centerY" secondItem="5QZ-f8-YtI" secondAttribute="centerY" id="rYR-oj-1mj"/>
+                            <constraint firstItem="5QZ-f8-YtI" firstAttribute="top" secondItem="S1a-Hw-jNO" secondAttribute="bottom" constant="20" id="sDy-8E-yqS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="UtZ-8l-VSF"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUG-e4-Eyk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="882" y="-275"/>
+            <point key="canvasLocation" x="880.79999999999995" y="-275.71214392803603"/>
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
